# test_hft

./: .env.example  .gitignore  CLAUDE.md  Qwen25-VL-7b.md  SmolDocling.md  ex_llama3-8b.ps1  gemma3-12b.md  hf_auth.py  internvl3-8b_batch.md  main.py  pyproject.toml  qwen25vl_analysis_result.txt  qwen25vl_local_analysis.txt  sample_report.py  test_Intern3-8b.py  test_Qwen25vl-7b.py  test_SmolDocling.py  test_SmolDoclings2.py  test_document.py  test_env.py  test_gemma3-12b.py  test_hft.code-workspace  test_pipeline.py  test_process_pdf.py  verify_environment.py
.claude/: settings.local.json
